--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     
     - name: checkout code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -44,10 +44,10 @@ jobs:
       - name: checkout code for jobs test
         uses: actions/checkouts@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with: 
-          java-version: "11"
+          java-version: "17"
           distribution: "adopt"
       - name: Run tests
         run:  |
